# upmem_llm_framework

./: .pylintrc  .vale.ini  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: hf_example.py  nn_example.py
scripts_simulation/: simulations_llama2_7B.py
src/upmem_llm_framework/: __init__.py  architectures_schema.json  base_architecture.py  options.py  profiler.py  pytorch_upmem_layers.py  sim_architectures.py  sim_architectures.yaml  simulator.py  utils.py
tests/: __init__.py  extra_arch.yaml  test_upmem_pytorch_simulator.py
